--- a/client/src/App.css
+++ b/client/src/App.css
@@ -656,12 +656,42 @@ html {
 /* RESPONSIVENESS */
 
 @media (max-width: 768px) {
+  
   .heroSection {
-    background: url('./static/images/rocketship.jpeg') no-repeat center;
+    background: url('./static/images/HeroAstronaut.jpeg') no-repeat;
     width: 100vw;
+    height: 40vw;
     position: relative;
     background-size: 100% auto;
-    height: 70vh;
+    display: flex;
+    justify-content: end;
+  }
+  .heroText {
+    padding-top: 5%;
+    min-width: 50%;
+  }
+  .linksNav {
+    font-size: .1rem;
+  }
+  .aboutMeNew{
+    margin-top: 8px;
+  }
+  .aboutMeNewText{
+    padding-bottom: 40px;
+    max-width: 100%;
+  }
+  .boxTest {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .heroSection {
+    background: url('./static/images/rocketship.jpeg') no-repeat center;
+    background-size: 100% auto;
+    width: 100vw;
+    min-height: 490px;
     justify-content: center;
   }
   .heroText {
